Add frontend for GitHub Pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -642,7 +642,7 @@
 
     <script>
         // Global variables
-        const API_BASE = 'http://127.0.0.1:5000';
+        const API_BASE = 'https://web-production-3e2e.up.railway.app/';
         let lastSearchData = null;
         let searchHistory = JSON.parse(localStorage.getItem('pubmed_search_history') || '[]');
         
